[package]
name = "passto-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.21"
passto = { version = "0.1.0", path = "../passto" }
rand = "0.8.5"

[[bin]]
name = "passto"
path = "src/main.rs"
