[package]
name = "passto-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "passto-ui"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.26.2", features = ["glow", "default_fonts", "persistence"] }
egui = "0.26.2"
log = "0.4.21"
wasm-bindgen-futures = "0.4.42"
passto = { version = "0.1.0", path = "../passto" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
