[package]
name = "passto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
base64-url = "2.0.2"
hex = "0.4.3"
num-bigint = "0.4.4"
num-traits = "0.2.18"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sha2 = "0.10.8"
thiserror = "1.0.58"

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"

[[bench]]
name = "encode"
harness = false
